--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -22,22 +22,21 @@
 
 <body class="">
     <!-- Big screen headers -->
-
     <div class="bigheader bg-header hidden md:block  w-full py-1 ">
         <div>
             <div class="first w-full  bg-header flex justify-between lg:px-12 px-8   items-center">
 
                 <div class="list1 deligate  flex justify-between  w-[56%] gap-1   items-center ">
                     <span class="firstt ">
-                        <p class="line1">EKO GARDENS</p>
+                        <p class="linee">EKO GARDENS</p>
 
                         <span class="svg">
-                            <i class="fa-solid fa-chevron-down"></i>
+                            <i class="fa-solid fa-chevron-down linee"></i>
                         </span>
                         <span class="next absolute top-10 left-[56px] z-40 bg-header hidden p-4  ">
                             <div class="next2 flex flex-col gap-4 justify-center ">
-                                <p>EKO GAURDING STANDARD</p>
-                                <p>EKO GAURDING CLASSIC</p>
+                                <p class="linee">EKO GAURDING STANDARD</p>
+                                <p class="linee">EKO GAURDING CLASSIC</p>
                             </div>
                         </span>
                     </span>
@@ -45,62 +44,62 @@
 
                     <!--  -->
                     <span class="firstt">
-                        <p class=" line1">EKO HOTEL</p>
+                        <p class=" linee">EKO HOTEL</p>
 
                         <span class="svg">
-                            <i class="fa-solid fa-chevron-down"></i>
+                            <i class="fa-solid fa-chevron-down linee"></i>
                         </span>
                         <span class="next absolute top-10 left-[204px] z-40 bg-header hidden  p-4 w-[250px]  ">
                             <div class="next2 flex flex-col gap-7 justify-center ">
-                                <p>EKO CLASSIC SUPERIOR</p>
-                                <p>EKO ATLANTIC SUPERIRO</p>
-                                <p>CLASSIC SUITE</p>
-                                <p>DIPLOMATIC SUITE</p>
-                                <p>PRESCIDENTIAL SUITE</p>
+                                <p class="linee">EKO CLASSIC SUPERIOR</p>
+                                <p class="linee">EKO ATLANTIC SUPERIRO</p>
+                                <p class="linee">CLASSIC SUITE</p>
+                                <p class="linee">DIPLOMATIC SUITE</p>
+                                <p class="linee">PRESCIDENTIAL SUITE</p>
                             </div>
                         </span>
                     </span>
 
                     <!--  -->
                     <span class="firstt ">
-                        <p class="line1">EKO SUITES</p>
+                        <p class="linee">EKO SUITES</p>
                         <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 line1">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
                         </svg> -->
                         <span class="svg">
-                            <i class="fa-solid fa-chevron-down"></i>
+                            <i class="fa-solid fa-chevron-down linee"></i>
                         </span>
                         <span class="next absolute top-10 left-[328px] z-40 bg-header hidden  p-4 w-[176px]  ">
                             <div class="next2 flex flex-col gap-4 justify-center ">
-                                <p>DELUXE ROOM</p>
-                                <p>STUDIO SUITE</p>
-                                <p>EXECUTIVE SUITE</p>
+                                <p class="linee">DELUXE ROOM</p>
+                                <p class="linee">STUDIO SUITE</p>
+                                <p class="linee">EXECUTIVE SUITE</p>
                             </div>
                         </span>
                     </span>
                     <span class="firstt ">
-                        <p class="line1">EKO SIGNATURE</p>
+                        <p class="linee">EKO SIGNATURE</p>
                         <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 line1">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
                         </svg> -->
                         <span class="svg">
-                            <i class="fa-solid fa-chevron-down"></i>
+                            <i class="fa-solid fa-chevron-down linee"></i>
                         </span>
 
                         <span class="next absolute top-10 left-[456px] z-40 bg-header hidden  p-4 w-[270px]  ">
                             <div class="next2 flex flex-col gap-7 justify-center ">
-                                <p>EKO CLASSIC SUPERIOR</p>
-                                <p>EKO ATLANTIC SUPERIRO</p>
-                                <p>CLASSIC SUITE</p>
-                                <p>DIPLOMATIC SUITE</p>
-                                <p>PRESCIDENTIAL SUITE</p>
+                                <p class="linee">EKO CLASSIC SUPERIOR</p>
+                                <p class="linee">EKO ATLANTIC SUPERIRO</p>
+                                <p class="linee">CLASSIC SUITE</p>
+                                <p class="linee">DIPLOMATIC SUITE</p>
+                                <p class="linee">PRESCIDENTIAL SUITE</p>
                             </div>
                         </span>
                     </span>
                     <span class="firstt line1">
-                        <p class="">Eko Tower II</p>
+                        <p class="linee">Eko Tower II</p>
                     </span>
                 </div>
 
@@ -114,7 +113,7 @@
 
                 <div class="flex w-[40%] gap-1 lg:gap-0 justify-between ">
                     <div class="flex justify-start items-center  w-3/4   gap-4">
-                        <a href="#" class="first2  text-center">The Company</a>
+                        <a href="#" class="first2   text-center">The Company</a>
                         <a href="#" class="first2  text-center" 2>Special Offers</a>
                     </div>
 
@@ -131,52 +130,53 @@
             <hr class="m-1">
         </div>
     </div>
-    <div class=" sticky top-0 hidden md:block ">
-        <div class="sec flex justify-between gap-8  w-full   bg-header items-center lg:px-12 px-8 ">
+    <!--  -->
+    <div class=" sticky top-0 z-10 hidden md:block ">
+        <div class="sec flex justify-between gap-8   z-20  w-full   bg-header items-center lg:px-12 px-8 ">
             <div class="flex w-[38%] justify-start gap-5 ">
 
 
                 <span class="spann1">
                     <label class="firstt san line1">
-                        <p class="">HOME</p>
+                        <p class="linee">HOME</p>
                         <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke-width="1.5" stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
                         </svg> -->
                         <span class="svg ">
-                            <i class="fa-solid fa-chevron-down"></i>
+                            <i class="fa-solid fa-chevron-down linee"></i>
                         </span>
 
                     </label>
                     <span class=" test num1  h-[100px] absolute flex flex-col  px-6  items-start bg-header  ">
-                        <p class="para"><a href="#">ABOUT US</a></p>
-                        <p class="para"><a href="#">CONTACT US</a></p>
+                        <p class="para linee"><a href="#">ABOUT US</a></p>
+                        <p class="para linee"><a href="#">CONTACT US</a></p>
 
                     </span>
                 </span>
 
                 <span class="flex p-2 san line1 justify-center items-center">
-                    <p class="line1">DINNING</p>
+                    <p class="linee">DINNING</p>
 
                 </span>
 
 
                 <span class="spann2">
                     <label class="firstt san line1">
-                        <p class="">MEETING & BANQUETTING</p>
+                        <p class="linee">MEETING & BANQUETTING</p>
                         <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
                         </svg> -->
                         <span class="svg ">
-                            <i class="fa-solid fa-chevron-down"></i>
+                            <i class="fa-solid fa-chevron-down linee"></i>
                         </span>
                     </label>
                     <span class=" test num2 absolute flex flex-col  px-6 items-start bg-header   h-[200px]">
-                        <p class="para"><a href="#">GRAND BALL ROOM</a></p>
-                        <p class="para"><a href="#">EKO CONVENTION CENTRE</a></p>
-                        <p class="para"><a href="#">FANTASIA</a></p>
-                        <p class="para"><a href="#">MEETING ROOM</a></p>
+                        <p class="para linee"><a href="#">GRAND BALL ROOM</a></p>
+                        <p class="para linee"><a href="#">EKO CONVENTION CENTRE</a></p>
+                        <p class="para linee"><a href="#">FANTASIA</a></p>
+                        <p class="para linee"><a href="#">MEETING ROOM</a></p>
                     </span>
                 </span>
 
@@ -193,21 +193,21 @@
 
                 <span class="spann3">
                     <label class="firstt san line1">
-                        <p class="">RECREATIONAL SERVICE</p>
+                        <p class="linee">RECREATIONAL SERVICE</p>
                         <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
                         </svg> -->
-                        <span class="svg ">
+                        <span class="svg linee">
                             <i class="fa-solid fa-chevron-down"></i>
                         </span>
                     </label>
                     <span class=" test num3 absolute flex flex-col  px-6 items-start bg-header   h-[250px]">
-                        <p class="para"><a href="#">SWIMMING POOL</a></p>
-                        <p class="para"><a href="#">GYM</a></p>
-                        <p class="para"><a href="#">TENNIS COURT</a></p>
-                        <p class="para"><a href="#">SPA</a></p>
-                        <p class="para"><a href="#">SALOON & NAIL STUDIO</a></p>
+                        <p class="para linee"><a href="#">SWIMMING POOL</a></p>
+                        <p class="para linee"><a href="#">GYM</a></p>
+                        <p class="para linee"><a href="#">TENNIS COURT</a></p>
+                        <p class="para linee"><a href="#">SPA</a></p>
+                        <p class="para linee"><a href="#">SALOON & NAIL STUDIO</a></p>
                     </span>
                 </span>
 
@@ -219,34 +219,73 @@
 
 
                 <span class="spann4">
-                    <label class="firstt san line1">
-                        <p class="">EVENTS</p>
+                    <label class="firstt san linee">
+                        <p class="linee">EVENTS</p>
                         <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke-width="1.5" stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
                         </svg> -->
-                        <span class="svg ">
+                        <span class="svg linee">
                             <i class="fa-solid fa-chevron-down"></i>
                         </span>
                     </label>
                     <span
                         class=" test num4 absolute right-28 flex flex-col  px-6 items-start bg-header w-80  h-[250px]">
-                        <p class="para"><a href="#">TROPICAL CHRISTMAS WONDERLAND</a></p>
-                        <p class="para"><a href="#">GYM</a></p>
-                        <p class="para"><a href="#">HIPPITY HOPPITY EASTER</a></p>
-                        <p class="para"><a href="#">HAUTE TABLE</a></p>
-                        <p class="para"><a href="#">INTIMATE CELEBRATIONS</a></p>
+                        <p class="para linee"><a href="#">TROPICAL CHRISTMAS WONDERLAND</a></p>
+                        <p class="para linee"><a href="#">GYM</a></p>
+                        <p class="para linee"><a href="#">HIPPITY HOPPITY EASTER</a></p>
+                        <p class="para linee"><a href="#">HAUTE TABLE</a></p>
+                        <p class="para linee"><a href="#">INTIMATE CELEBRATIONS</a></p>
                     </span>
                 </span>
 
-                <span class="flex p-2 san justify-center items-center line1">
-                    <p class="">GALLERY</p>
+                <span class="flex p-2 linee san justify-center items-center line1">
+                    <p class="linee">GALLERY</p>
                 </span>
 
             </div>
         </div>
 
     </div>
+    <!-- Big screen headers Done-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- small screen headers needes edit -->
@@ -283,7 +322,7 @@
 
         <!--  -->
     </div>
-    <div class="sticky top-0 block md:hidden">
+    <div class="sticky top-0 z-10 block md:hidden">
         <div class="sec flex justify-between gap-8 sticky top-0 w-full bg-header   items-center py-2 px-4 ">
             <div class=" w-[56] flex justify-start items-center  ">
                 <a href="#" class="logo w-56   bg-[url('./images/logo-imgg.jpg')] h-14 bg-cover bg-center"></a>
@@ -321,14 +360,14 @@
 
     <!-- HeroBacgroud Slide -->
     <div
-        class="banner1 Hero relative -z-10  transition-all ease-in-out duration-700 h-[50vh] md:h-[100vh] bg-[url('./images/eko1.jpg')] bg-cover bg-center">
+        class="banner1 Hero relative z-0 transition-all ease-in-out duration-700 h-[50vh] md:h-[100vh] bg-[url('./images/eko1.jpg')] bg-cover bg-center">
 
-        <span class="arrows  absolute arrLeft  top-1/2  left-[23px] ">
+        <span class="arrows z-50 absolute arrLeft cursor-pointer top-1/2  left-[23px] ">
             <i class="fa-solid fa-arrow-left"></i>
         </span>
 
-        <span class="arrows absolute arrRight  top-1/2  right-[23px]">
-            <i class=" fa-solid fa-arrow-right arrow"></i>
+        <span class="arrows z-50 absolute arrRight  top-1/2   right-[23px]">
+            <i class=" fa-solid fa-arrow-right  arrow"></i>
         </span>
 
     </div>
