--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -410,7 +410,7 @@
     <!-- Banner4-->
     <div class="banner4 bg-header px-12 pt-[70px] pb-1">
         <div class="pt-5 px-5 pb-8 flex justify-center items-center gap-6 flex-col">
-            <div class="flex welcome justify-center items-center ">
+            <div class="flex welcome text-[32px] md:text-[42px] justify-center items-center ">
                 <p class="text-headerBtnText"><span class="text-darkText">Welcome to</span> Eko Hotels & Suites</p>
             </div>
             <span class="flex flex-col w-full justify-center gap-[3px] items-center">
