--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -279,7 +279,7 @@
 
         <!--  -->
     </div>
-    <div class="sticky top-0 z-10 boxx block md:hidden">
+    <div class="sticky top-0 z-10 boxx2 block md:hidden">
         <div class="sec flex justify-between gap-8 sticky top-0 w-full bg-header   items-center py-2 px-4 ">
             <div class=" w-[56] flex justify-start items-center  ">
                 <a href="#" class="logo w-56   bg-[url('./images/logo-imgg.jpg')] h-14 bg-cover bg-center"></a>
