--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -318,7 +318,7 @@
 
 
     <!-- HeroBacgroud Slide -->
-    <div
+    <!-- <div
         class="banner1 Hero relative z-0 transition-all ease-in-out duration-700 h-[50vh] md:h-[100vh] bg-[url('./images/eko1.jpg')] bg-cover bg-center">
 
         <span class="arrows z-50 absolute arrLeft cursor-pointer top-1/2  left-[23px] ">
@@ -329,7 +329,7 @@
             <i class=" fa-solid fa-arrow-right  arrow"></i>
         </span>
 
-    </div>
+    </div> -->
     <!-- Hero Done -->
     <!-- ******************************************** -->
 
@@ -409,7 +409,7 @@
 
     <!-- Banner4-->
     <div class="banner4 bg-header px-12 pt-[70px] pb-1">
-        <div class="pt-5 px-5 pb-8 flex justify-center items-center gap-6 flex-col">
+        <div class="pt-5 px-5 flex-wrap  pb-8 flex justify-center items-center gap-6 flex-col">
             <div class="flex welcome text-[32px] md:text-[42px] justify-center items-center ">
                 <p class="text-headerBtnText"><span class="text-darkText">Welcome to</span> Eko Hotels & Suites</p>
             </div>
@@ -422,6 +422,57 @@
     </div>
     <!-- Banner4 Done-->
     <!-- ******************************************** -->
+
+    <!-- Banner5 -->
+    <div class="banner5 bg-header  relative flex justif item center pb-14    pl-[15px] pr-[91.98px] ">
+
+        <div class="w-[50%] childd1">
+            <div class="  h-[624px] flex justify-center items-center ">
+
+                <div
+                    class=" top-4 w-full childd1_img bg-[url('./images/childd1_imge.jpg')] h-[400px] bg-center bg-cover">
+
+                </div>
+
+            </div>
+        </div>
+
+        <div class="min-h-[624px] py-5 w-[50%] ">
+            <div class="childd2  custom-shadow flex justify-center  items-center p-12 min-h-[540px] flex-col  gap-5 ">
+                <p class="w-full about text-headerBtnText ">About us</p>
+                <p class="most w-full">The Most Preferred Hotel in West Africa</p>
+                <p class="worrd">Eko Hotels & Suites is the most preferred hotel in West Africa, and it is all about the right mix!
+                    Located in the heart
+                    of Victoria Island, we offer our clients a perfect blend of business & leisure amenities with dining
+                    and
+                    recreational
+                    options delicately infused in one amazing space. We crown all these with services that meet the
+                    highest
+                    international
+                    standards.</p>
+                <p class="worrd">Overlooking the new Eko Atlantic City and Atlantic Ocean, it is just a 10-minute drive to the City
+                    Centre
+                    and only
+                    45minutes away from the Airport.</p>
+                <p class="worrd">Our hotels are designed for your comfort and convenience. Your security is our primary concern and
+                    you
+                    will find our
+                    customer care second to none.</p>
+
+
+                <div class="w-full">
+                    <span
+                        class="px-6 font-semibold learn_btn cursor-pointer py-2 bg-headerBtnText text-white hover:text-black hover:bg-white transition ease-in-out duration-700">
+                        LEARN MORE
+                    </span>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
 
     <div class="flex text-5xl  justify-center items-center bg-slate-500">
         <h1 class="text-5xl text-center ">Moore de come. Make i rest small abeg🥱</h1>
