--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -424,23 +424,23 @@
     <!-- ******************************************** -->
 
     <!-- Banner5 -->
-    <div class="banner5 bg-header  relative flex justif item center pb-14    pl-[15px] pr-[91.98px] ">
+    <div class="banner5 bg-header  relative flex justif item center pb-0 md:pb-14  flex-col md:flex-row  pl-0 md:pl-[15px] pr-0 md:pr-[91.98px] ">
 
-        <div class="w-[50%] childd1">
+        <div class=" w-full md:w-[47%]  childd1">
             <div class="  h-[624px] flex justify-center items-center ">
 
                 <div
-                    class=" top-4 w-full childd1_img bg-[url('./images/childd1_imge.jpg')] h-[400px] bg-center bg-cover">
+                    class=" top-4 w-full childd1_img bg-[url('./images/childd1_imge.jpg')] h-[482px] bg-center bg-cover">
 
                 </div>
 
             </div>
         </div>
 
-        <div class="min-h-[624px] py-5 w-[50%] ">
-            <div class="childd2  custom-shadow flex justify-center  items-center p-12 min-h-[540px] flex-col  gap-5 ">
-                <p class="w-full about text-headerBtnText ">About us</p>
-                <p class="most w-full">The Most Preferred Hotel in West Africa</p>
+        <div class="min-h-[624px] flex justify-center items-center  md:px-0 py-0 md:py-5 w-full md:w-[53%] relative">
+            <div class="childd2 w-[97%] md:w-full absolute md:relative bg-header  -top-44 md:top-0  custom-shadow flex justify-center  items-center p-5 md:p-[50px] min-h-[540px] flex-col gap-3 md:gap-5 ">
+                <p class="w-full about text-headerBtnText text-[14px] md:text-[16px] ">About us</p>
+                <p class="most w-full text-[21px] md:text-[32px]">The Most Preferred Hotel in West Africa</p>
                 <p class="worrd">Eko Hotels & Suites is the most preferred hotel in West Africa, and it is all about the right mix!
                     Located in the heart
                     of Victoria Island, we offer our clients a perfect blend of business & leisure amenities with dining
@@ -462,7 +462,7 @@
 
                 <div class="w-full">
                     <span
-                        class="px-6 font-semibold learn_btn cursor-pointer py-2 bg-headerBtnText text-white hover:text-black hover:bg-white transition ease-in-out duration-700">
+                        class="px-6 font-semibold learn_btn cursor-pointer py-3 bg-headerBtnText text-white hover:text-black hover:bg-white transition ease-in-out duration-700">
                         LEARN MORE
                     </span>
                 </div>
