--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -318,7 +318,7 @@
 
 
     <!-- HeroBacgroud Slide -->
-    <!-- <div
+    <div
         class="banner1 Hero relative z-0 transition-all ease-in-out duration-700 h-[50vh] md:h-[100vh] bg-[url('./images/eko1.jpg')] bg-cover bg-center">
 
         <span class="arrows z-50 absolute arrLeft cursor-pointer top-1/2  left-[23px] ">
@@ -329,7 +329,7 @@
             <i class=" fa-solid fa-arrow-right  arrow"></i>
         </span>
 
-    </div> -->
+    </div>
     <!-- Hero Done -->
     <!-- ******************************************** -->
 
