--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -502,47 +502,48 @@
     <!-- ---------- -->
 
     <div class="griddiv grid grid-cols-1 md:grid-cols-2 bg-banner5 px-12">
-        <div class="frame">
-            <div class="fchild relative bg-[url('./images/box1.jpg')] bg-center bg-cover ">
-                <div
-                    class="w-full relative  Eko h-full bg-trans transition-all ease-in-out duration-700 hover:bg-transxl">
-                    <p class="ekoo">
-                        At Eko Gardens, the rooms are well appointed and designed to provide comfort and convenience.
-                    </p>
-                    <span class="absolute eko px-2  w-full">
-
-                        <p class="text-white ">
-                            Eko Gardens</p>
-                        <p class="bg-headerBtnText h-[1px]  w-full">
-                    </span>
-                </div>
-            </div>
-        </div>
         <div class="frame ">
-            <div class="fchild relative bg-[url('./images/box2.jpg')] bg-center bg-cover">
-                <div class="w-full h-full  Eko bg-trans transition-all ease-in-out duration-700 hover:bg-transxl">
+            <div class="fchild relative bg-[url('./images/box4.jpg')] bg-center bg-cover">
+                <div
+                    class="w-full h-full relative transition-all ease-in-out duration-700 Eko bg-trans hover:bg-transxl">
+
                     <p class="ekoo">
                         At Eko Gardens, the rooms are well appointed and designed to provide comfort and convenience.
                     </p>
-                    <span class="absolute eko bottom-4 px-2 w-full">
-                        <p class="text-white ">
-                            Eko Hotel</p>
+
+                    <span class="absolute px-2 eko  bottom-4 w-full">
+                        <p class="text-white boxtext">
+                            Eko Gardens</p>
                         <p class="bg-headerBtnText h-[1px]  w-full"></p>
                     </span>
-                </div>
-            </div>
-        </div>
-        <div class="frame ">
-            <div class="fchild relative bg-[url('./images/box3.jpg')] bg-center bg-cover">
-                <div class="w-full h-full  Eko bg-trans transition-all ease-in-out duration-700 hover:bg-transxl">
-                    <p class="ekoo">
-                        At Eko Gardens, the rooms are well appointed and designed to provide comfort and convenience.
-                    </p>
-                    <span class="absolute px-2 eko bottom-4 w-full">
-                        <p class="text-white ">
-                            Eko Suites</p>
-                        <p class="bg-headerBtnText h-[1px]  w-full">
+
+                    <span class="Alinks flex justify-center gap-3 px-2 text-headerBtnText">
+                        <a href="#" class="alinks relative ">
+                            <span class="texttt">
+                                Book Now
+                            </span>
+                            <span class="house ">
+                                <span class="clr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                                <span class="clrr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                            </span>
+                        </a>
+                        <a href="#" class="alinks relative">
+                            <span class="texttt">View More</span>
+                            <span class="house ">
+                                <span class="clr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                                <span class="clrr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                            </span>
+                        </a>
                     </span>
+
                 </div>
             </div>
         </div>
@@ -550,24 +551,136 @@
             <div class="fchild relative bg-[url('./images/box4.jpg')] bg-center bg-cover">
                 <div
                     class="w-full h-full relative transition-all ease-in-out duration-700 Eko bg-trans hover:bg-transxl">
+
                     <p class="ekoo">
-                        At Eko Gardens, the rooms are well appointed and designed to provide comfort and convenience.
+                        Eko Hotel rooms and suites are decorated and designed for your comfort and relaxation.
                     </p>
+
+                    <span class="absolute px-2 eko  bottom-4 w-full">
+                        <p class="text-white ">
+                            Eko Hotel</p>
+                        <p class="bg-headerBtnText h-[1px]  w-full"></p>
+                    </span>
+
+                    <span class="Alinks flex justify-center gap-3 px-2 text-headerBtnText">
+                        <a href="#" class="alinks relative ">
+                            <span class="texttt">
+                                Book Now
+                            </span>
+                            <span class="house ">
+                                <span class="clr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                                <span class="clrr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                            </span>
+                        </a>
+                        <a href="#" class="alinks relative">
+                            <span class="texttt">View More</span>
+                            <span class="house ">
+                                <span class="clr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                                <span class="clrr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                            </span>
+                        </a>
+                    </span>
+
+                </div>
+            </div>
+        </div>
+        <div class="frame ">
+            <div class="fchild relative bg-[url('./images/box4.jpg')] bg-center bg-cover">
+                <div
+                    class="w-full h-full relative transition-all ease-in-out duration-700 Eko bg-trans hover:bg-transxl">
+
+                    <p class="ekoo">
+                        Eko Suites is tucked in the most discreet part of the property with 88 large suites. The
+                        property offers a peaceful,
+                        quiet and relaxing ambience.
+                    </p>
+
+                    <span class="absolute px-2 eko  bottom-4 w-full">
+                        <p class="text-white ">
+                            Eko Suites</p>
+                        <p class="bg-headerBtnText h-[1px]  w-full"></p>
+                    </span>
+                    <span class="Alinks flex justify-center gap-3 px-2 text-headerBtnText">
+                        <a href="#" class="alinks relative ">
+                            <span class="texttt">
+                                Book Now
+                            </span>
+                            <span class="house ">
+                                <span class="clr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                                <span class="clrr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                            </span>
+                        </a>
+                        <a href="#" class="alinks relative">
+                            <span class="texttt">View More</span>
+                            <span class="house ">
+                                <span class="clr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                                <span class="clrr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                            </span>
+                        </a>
+                    </span>
+
+                </div>
+            </div>
+        </div>
+        <div class="frame ">
+            <div class="fchild relative bg-[url('./images/box4.jpg')] bg-center bg-cover">
+                <div
+                    class="w-full h-full relative transition-all ease-in-out duration-700 Eko bg-trans hover:bg-transxl">
+
+                    <p class="ekoo">
+                        Caring comes easily to those of us who are privileged to cater to you at Eko Signature. The
+                        vibrant colours of the
+                        furnishing indulges you
+                    </p>
+
                     <span class="absolute px-2 eko  bottom-4 w-full">
                         <p class="text-white ">
                             Eko Signature</p>
                         <p class="bg-headerBtnText h-[1px]  w-full"></p>
                     </span>
                     <span class="Alinks flex justify-center gap-3 px-2 text-headerBtnText">
-                        <a href="#" class="alinks">
-                            Book Now <span class=""><i class="fa-solid fa-chevron-right"></i></span> <span><i
-                                    class="fa-solid fa-chevron-right"></i></span>
+                        <a href="#" class="alinks relative ">
+                            <span class="texttt">
+                                Book Now
+                            </span>
+                            <span class="house ">
+                                <span class="clr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                                <span class="clrr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                            </span>
                         </a>
-                        <a href="#" class="alinks">
-                            View More <span><i class="fa-solid fa-chevron-right"></i></span> <span><i
-                                    class="fa-solid fa-chevron-right"></i></span>
+                        <a href="#" class="alinks relative">
+                            <span class="texttt">View More</span>
+                            <span class="house ">
+                                <span class="clr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                                <span class="clrr">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </span>
+                            </span>
                         </a>
                     </span>
+
                 </div>
             </div>
         </div>
